feat: add select filter

--- a/telegram.html
+++ b/telegram.html
@@ -226,7 +226,9 @@
       </nav>
     </header>
     <main class="content">
-      <section class="social-intro social-intro_type_tg">
+      <section
+        class="social-intro social-intro_type_tg social-intro_unreg-styled"
+      >
         <div class="social-intro__container">
           <div class="social-intro__container-text">
             <h1 class="social-intro__title">
