feat: add select filter

--- a/telegram.html
+++ b/telegram.html
@@ -2013,7 +2013,7 @@
         >
       </div>
     </div>
-    <script type="module" src="./scripts/base.v8.js"></script>
+    <script type="module" src="./dist/base.aade09a6b63f826502b7.js"></script>
     <script type="module" src="./scripts/pages/telegram-views.js"></script>
   </body>
 </html>
