feat: add select filter

--- a/telegram.html
+++ b/telegram.html
@@ -2001,7 +2001,9 @@
           </div>
           <div class="popup__information">
             <h4 class="popup__subtitle">Дополнительная информация:</h4>
-            <p class="popup__text popup__text_type_information"></p>
+            <ul
+              class="popup__text popup__info-list popup__text_type_information"
+            ></ul>
           </div>
           <div class="popup__example">
             <h4 class="popup__subtitle">🔗 Указывать ссылку на пост</h4>
