--- a/telegram.html
+++ b/telegram.html
@@ -395,7 +395,7 @@
           </div>
         </div>
       </section>
-      <section class="service-list" id="service-list" data-socials="telegram">
+      <section class="service-list" id="service-list" data-socials="vk">
         <h2 class="section-title service-list__title">Накрутка Телеграм</h2>
         <div class="service-list__description">
           <h3 class="service-list__description-subtitle">Обозначения</h3>
@@ -427,7 +427,9 @@
           <ul class="service-list__headers-list">
             <li class="service-list__header-item">ID</li>
             <li class="service-list__header-item">Название</li>
-            <li class="service-list__header-item">Стоимость за 1 000</li>
+            <li class="service-list__header-item">
+              Стоимость за&nbsp;1&nbsp;000
+            </li>
             <li class="service-list__header-item">Время запуска</li>
             <li class="service-list__header-item">Скорость</li>
             <li class="service-list__header-item">Гарантия</li>
