feat: add select filter

--- a/telegram.html
+++ b/telegram.html
@@ -395,7 +395,7 @@
           </div>
         </div>
       </section>
-      <section class="service-list" id="service-list" data-socials="vk">
+      <section class="service-list" id="service-list" data-socials="telegram">
         <h2 class="section-title service-list__title">Накрутка Телеграм</h2>
         <div class="service-list__description">
           <h3 class="service-list__description-subtitle">Обозначения</h3>
