feat: add select filter

--- a/telegram.html
+++ b/telegram.html
@@ -2008,7 +2008,7 @@
             ></ul>
           </div>
           <div class="popup__example">
-            <h4 class="popup__subtitle">🔗 Указывать ссылку на пост</h4>
+            <h4 class="popup__subtitle">🔗 Пример</h4>
             <p class="popup__text popup__text_type_example"></p>
           </div>
         </div>
