feat: add select filter

--- a/telegram.html
+++ b/telegram.html
@@ -2001,15 +2001,17 @@
             <h4 class="popup__subtitle">Описание:</h4>
             <ul class="popup__description-list"></ul>
           </div>
-          <div class="popup__information">
-            <h4 class="popup__subtitle">Дополнительная информация:</h4>
-            <ul
-              class="popup__text popup__info-list popup__text_type_information"
-            ></ul>
-          </div>
           <div class="popup__example">
             <h4 class="popup__subtitle">🔗 Пример</h4>
             <p class="popup__text popup__text_type_example"></p>
+          </div>
+          <div class="popup__information popup__information_hidden">
+            <h4 class="popup__subtitle popup__subtitle_type_info">
+              Дополнительная информация:
+            </h4>
+            <ul
+              class="popup__text popup__info-list popup__text_type_information"
+            ></ul>
           </div>
         </div>
         <a href="#" class="btn btn_size_small btn_color_orange popup__button"
