--- a/pages/instagram.html
+++ b/pages/instagram.html
@@ -7,9 +7,12 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./dist/base.aade09a6b63f826502b7.css" />
-    <link rel="stylesheet" href="./pages/telegram.css" />
-    <title>Телеграм</title>
+    <link rel="stylesheet" href="../dist/base.aade09a6b63f826502b7.css" />
+    <link rel="stylesheet" href="../styles/telegram.css" />
+    <script type="module" src="../dist/base.aade09a6b63f826502b7.js"></script>
+    <script type="module" src="../scripts/pages/social.js"></script>
+    <script type="module" src="../scripts/pages/instagram.js"></script>
+    <title>Инстаграм</title>
   </head>
   <body class="root">
     <header class="header">
@@ -395,8 +398,8 @@
           </div>
         </div>
       </section>
-      <section class="service-list" id="service-list" data-socials="telegram">
-        <h2 class="section-title service-list__title">Накрутка Телеграм</h2>
+      <section class="service-list" id="service-list" data-socials="instagram">
+        <h2 class="section-title service-list__title">Накрутка Инстаграм</h2>
         <div class="service-list__description">
           <h3 class="service-list__description-subtitle">Обозначения</h3>
           <ul class="service-list__description-list">
@@ -412,7 +415,10 @@
             </li>
           </ul>
         </div>
-        <form class="service-list__form service-list__form_hided" action="">
+        <form
+          class="service-list__form service-list__form_hided service-list__form_role_filter"
+          action=""
+        >
           <div class="service-list__select-container">
             <select
               class="service-list__input service-list__input_type_select"
@@ -2019,7 +2025,5 @@
         >
       </div>
     </div>
-    <script type="module" src="./dist/base.aade09a6b63f826502b7.js"></script>
-    <script type="module" src="./scripts/pages/telegram-views.js"></script>
   </body>
 </html>
