feat: add select filter

--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -401,7 +401,7 @@
       <section
         class="service-list"
         id="service-list"
-        data-socials="telegram.views"
+        data-socials="telegram.followers"
       >
         <h2 class="section-title service-list__title">Накрутка Телеграм</h2>
         <div class="service-list__description">
