feat: add select filter

--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/telegram.css" />
     <script type="module" src="../dist/base.aade09a6b63f826502b7.js"></script>
     <script type="module" src="../scripts/pages/social.js"></script>
-    <script type="module" src="../scripts/pages/telegram.js"></script>
+    <script type="module" src="../scripts/pages/threads.js"></script>
     <title>Телеграм</title>
   </head>
   <body class="root">
@@ -398,11 +398,7 @@
           </div>
         </div>
       </section>
-      <section
-        class="service-list"
-        id="service-list"
-        data-socials="telegram.followers"
-      >
+      <section class="service-list" id="service-list" data-socials="threads">
         <h2 class="section-title service-list__title">Накрутка Телеграм</h2>
         <div class="service-list__description">
           <h3 class="service-list__description-subtitle">Обозначения</h3>
