--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="../dist/base.aade09a6b63f826502b7.css" />
+    <link rel="stylesheet" href="../styles/global.v17.css" />
     <link rel="stylesheet" href="../styles/telegram.css" />
     <script type="module" src="../dist/base.aade09a6b63f826502b7.js"></script>
     <script type="module" src="../scripts/pages/social.js"></script>
