fix: fix popup height

--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <link rel="stylesheet" href="../styles/global.v17.css" />
     <link rel="stylesheet" href="../styles/telegram.css" />
-    <script type="module" src="../dist/base.aade09a6b63f826502b7.js"></script>
+    <script defer src="../dist/base.0c532c540f9cb2a7c766.js"></script>
     <script type="module" src="../scripts/pages/social.js"></script>
     <script type="module" src="../scripts/pages/telegram.js"></script>
     <title>Телеграм</title>
@@ -230,7 +230,7 @@
     </header>
     <main class="content">
       <section
-        class="social-intro social-intro_type_tg social-intro_unreg-styled"
+        class="social-intro social-intro_type_social social-intro_type_tg social-intro_unreg-styled"
       >
         <div class="social-intro__container">
           <div class="social-intro__container-text">
@@ -398,11 +398,7 @@
           </div>
         </div>
       </section>
-      <section
-        class="service-list"
-        id="service-list"
-        data-socials="telegram.followers"
-      >
+      <section class="service-list" id="service-list" data-socials="telegram">
         <h2 class="section-title service-list__title">Накрутка Телеграм</h2>
         <div class="service-list__description">
           <h3 class="service-list__description-subtitle">Обозначения</h3>
@@ -1481,24 +1477,26 @@
         </div>
       </section>
       <section class="social">
-        <h2 class="section-title social__title">
-          Телеграм позволяет зарабатывать деньги?
-        </h2>
-        <p class="text social__text">
-          В настоящее время Telegram стал одной из самых популярных и быстро
-          развивающихся социальных сетей не только в России, но и в мире.
-          Телеграм-каналы позволяют зарабатывать деньги, как на реализации своей
-          собственной продукции, так и на размещении рекламы. Но такой вид
-          заработка доступен только группам с большой аудиторией.
-        </p>
-        <h3 class="social__subtitle">Что же делать новичкам?</h3>
-        <p class="text social__text">
-          Мы предлагаем накрутку живых подписчиков в Телеграмм-каналы и группы.
-          Данная услуга поможет поднять популярность нового канала и привлечь
-          много новых пользователей. А там дело уже за вами. Вы размещаете
-          годный контент, а мы накручиваем вам реальных подписчиков, которые
-          поднимают популярность вашей группы.
-        </p>
+        <div class="social__container social__container_type_vk">
+          <h2 class="section-title social__title">
+            Телеграм позволяет зарабатывать деньги?
+          </h2>
+          <p class="text social__text">
+            В настоящее время Telegram стал одной из самых популярных и быстро
+            развивающихся социальных сетей не только в России, но и в мире.
+            Телеграм-каналы позволяют зарабатывать деньги, как на реализации
+            своей собственной продукции, так и на размещении рекламы. Но такой
+            вид заработка доступен только группам с большой аудиторией.
+          </p>
+          <h3 class="social__subtitle">Что же делать новичкам?</h3>
+          <p class="text social__text">
+            Мы предлагаем накрутку живых подписчиков в Телеграмм-каналы и
+            группы. Данная услуга поможет поднять популярность нового канала и
+            привлечь много новых пользователей. А там дело уже за вами. Вы
+            размещаете годный контент, а мы накручиваем вам реальных
+            подписчиков, которые поднимают популярность вашей группы.
+          </p>
+        </div>
       </section>
       <section class="faq">
         <h2 class="section-title faq__title">FAQ</h2>
