fix: fix popup height

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,8 +7,10 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="./pages/global.v17.css" />
-    <link rel="stylesheet" href="./pages/index.v10.css" />
+    <link rel="stylesheet" href="../styles/global.v17.css" />
+    <link rel="stylesheet" href="../styles/index.v10.css" />
+    <script defer src="../dist/base.0c532c540f9cb2a7c766.js"></script>
+    <script defer src="../dist/index.0c532c540f9cb2a7c766.js"></script>
     <title>Главная</title>
   </head>
   <body class="root">
@@ -1968,7 +1970,5 @@
         <p class="culc__text"></p>
       </li>
     </template>
-    <script type="module" src="./dist/base.a2052ea2b8ca28bc768f.js"></script>
-    <script type="module" src="./dist/index.a2052ea2b8ca28bc768f.js"></script>
   </body>
 </html>
