--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -291,7 +291,7 @@
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/in-scale-logo.svg"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/in-scale-logo.webp"
                 alt="In-scale"
               />
             </div>
@@ -302,18 +302,18 @@
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/affpartners-logo.svg"
-                alt="Affpartners"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/solovov-logo.webp"
+                alt="Соловов"
               />
             </div>
-            <h3 class="rating__grade">4,9</h3>
-            <p class="rating__count">9+ отзывов</p>
+            <h3 class="rating__grade">4,6</h3>
+            <p class="rating__count">90 отзывов</p>
           </li>
           <li class="rating__item">
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/otzyv-marketing-logo.svg"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/otzyv-marketing-logo.png"
                 alt="Отзыв-маркетинг"
               />
             </div>
@@ -324,7 +324,7 @@
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/eto-razvod-logo.svg"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/eto-razvod-logo.webp"
                 alt="Это развод?"
               />
             </div>
