fix: fix popup height

--- a/pages/index.html
+++ b/pages/index.html
@@ -922,23 +922,17 @@
           <h3 class="optimization__subtitle">
             Выберите, какую соцсеть вам нужно раскрутить
           </h3>
-          <ul class="optimization__list choice__list culc__list"></ul>
+          <ul class="optimization__list culc__list"></ul>
           <div
             class="optimization__services choice__services choice__services_hided culc__service-container"
           >
-            <h3 class="optimization__subtitle choice__subtitle">
-              Выберите тип услуги:
-            </h3>
-            <ul
-              class="optimization__sublist choice__sublist culc__sublist"
-            ></ul>
+            <h3 class="optimization__subtitle">Выберите тип услуги:</h3>
+            <ul class="optimization__sublist culc__sublist"></ul>
           </div>
           <div
             class="optimization__description choice__description choice__description_hided"
           >
-            <h3 class="optimization__choice-title choice__subtitle">
-              Стоимость:
-            </h3>
+            <h3 class="optimization__choice-title">Стоимость:</h3>
             <p class="optimization__proposal choice__proposal">
               от
               <span class="choice__cost culc__cost"></span>
@@ -1466,7 +1460,9 @@
             <div
               class="choice__services choice__services_hided culc__service-container"
             >
-              <h3 class="choice__subtitle">Выберите тип услуги:</h3>
+              <h3 class="choice__subtitle choice__subtitle_role_cost">
+                Выберите тип услуги:
+              </h3>
               <ul class="choice__sublist culc__sublist"></ul>
             </div>
             <div class="choice__description choice__description_hided">
