--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -469,7 +469,7 @@
                 Выберите тип услуги:
               </h3>
               <ul
-                class="optimization__sublist optimization__sublist_pos_center choice__sublist culc__sublist"
+                class="optimization__sublist optimization__sublist_pos_center culc__sublist"
               ></ul>
             </div>
             <div
