feat: add bg images

--- a/pages/instagram.html
+++ b/pages/instagram.html
@@ -7,9 +7,9 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="../dist/base.aade09a6b63f826502b7.css" />
+    <link rel="stylesheet" href="../styles/global.v17.css" />
     <link rel="stylesheet" href="../styles/telegram.css" />
-    <script type="module" src="../dist/base.aade09a6b63f826502b7.js"></script>
+    <script defer src="../dist/base.c7a4d2590cdb88d39611.js"></script>
     <script type="module" src="../scripts/pages/social.js"></script>
     <script type="module" src="../scripts/pages/instagram.js"></script>
     <title>Инстаграм</title>
@@ -229,59 +229,61 @@
       </nav>
     </header>
     <main class="content">
-      <section
-        class="social-intro social-intro_type_tg social-intro_unreg-styled"
-      >
-        <div class="social-intro__container">
-          <div class="social-intro__container-text">
-            <h1 class="social-intro__title">
-              Накрутка подписчиков в&nbsp;Телеграм с гарантией
-            </h1>
-            <p class="text social-intro__text">
-              От 1 рубля за 1000 подписчиков
-            </p>
-            <a
-              href="#service-list"
-              class="btn btn_color_orange btn_size_large social-intro__button"
-              >Получить подписчиков</a
-            >
-          </div>
-          <div class="social-intro__container-image">
-            <div class="social-intro__social social-intro__social_pos_up">
-              <h3 class="social-intro__subtitle">Подписки</h3>
-              <img
-                class="social-intro__icon"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/default-icons/user-icon.svg"
-                alt="Пользователь"
-              />
-              <p class="social-intro__count-container">
-                +<span
-                  class="social-intro__count custom-counter"
-                  data-start="0"
-                  data-stop="1950"
-                ></span>
+      <section class="social-intro social-intro_unreg-styled">
+        <div
+          class="social-intro__wrapper social-intro__wrapper_type_social social-intro__wrapper_type_ig"
+        >
+          <div class="social-intro__content">
+            <div class="social-intro__container-text">
+              <h1 class="social-intro__title">
+                Накрутка подписчиков в&nbsp;Инстаграм* с гарантией
+              </h1>
+              <p class="text social-intro__text">
+                От 1 рубля за 1000 подписчиков
               </p>
+              <a
+                href="#service-list"
+                class="btn btn_color_orange btn_size_large social-intro__button"
+                >Получить подписчиков</a
+              >
             </div>
-            <div class="social-intro__social social-intro__social_pos_buttom">
-              <h3 class="social-intro__subtitle">Лайки</h3>
+            <div class="social-intro__container-image">
+              <div class="social-intro__social social-intro__social_pos_up">
+                <h3 class="social-intro__subtitle">Подписки</h3>
+                <img
+                  class="social-intro__icon"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/default-icons/user-icon.svg"
+                  alt="Пользователь"
+                />
+                <p class="social-intro__count-container">
+                  +<span
+                    class="social-intro__count custom-counter"
+                    data-start="0"
+                    data-stop="2890"
+                  ></span>
+                </p>
+              </div>
+              <div class="social-intro__social social-intro__social_pos_buttom">
+                <h3 class="social-intro__subtitle">Лайки</h3>
+                <img
+                  class="social-intro__icon"
+                  src="https://cdn.rawgit.com/bread2077/temp/main/images/default-icons/like-icon.svg"
+                  alt="Лайки"
+                />
+                <p class="social-intro__count-container">
+                  +<span
+                    class="social-intro__count custom-counter"
+                    data-start="0"
+                    data-stop="6500"
+                  ></span>
+                </p>
+              </div>
               <img
-                class="social-intro__icon"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/default-icons/like-icon.svg"
-                alt="Лайки"
+                class="social-intro__image"
+                src="../images/bg-social/ig/ig-phone.webp"
+                alt="Телефон"
               />
-              <p class="social-intro__count-container">
-                +<span
-                  class="social-intro__count custom-counter"
-                  data-start="0"
-                  data-stop="2500"
-                ></span>
-              </p>
             </div>
-            <img
-              class="social-intro__image"
-              src="https://cdn.rawgit.com/bread2077/temp/main/images/social-tel.webp"
-              alt="Телефон"
-            />
           </div>
         </div>
       </section>
@@ -302,12 +304,12 @@
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/affpartners-logo.svg"
-                alt="Affpartners"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/solovov-logo.webp"
+                alt="Соловов"
               />
             </div>
-            <h3 class="rating__grade">4,9</h3>
-            <p class="rating__count">9+ отзывов</p>
+            <h3 class="rating__grade">4,6</h3>
+            <p class="rating__count">90 отзывов</p>
           </li>
           <li class="rating__item">
             <div class="rating__logo-container">
@@ -1477,24 +1479,26 @@
         </div>
       </section>
       <section class="social">
-        <h2 class="section-title social__title">
-          Телеграм позволяет зарабатывать деньги?
-        </h2>
-        <p class="text social__text">
-          В настоящее время Telegram стал одной из самых популярных и быстро
-          развивающихся социальных сетей не только в России, но и в мире.
-          Телеграм-каналы позволяют зарабатывать деньги, как на реализации своей
-          собственной продукции, так и на размещении рекламы. Но такой вид
-          заработка доступен только группам с большой аудиторией.
-        </p>
-        <h3 class="social__subtitle">Что же делать новичкам?</h3>
-        <p class="text social__text">
-          Мы предлагаем накрутку живых подписчиков в Телеграмм-каналы и группы.
-          Данная услуга поможет поднять популярность нового канала и привлечь
-          много новых пользователей. А там дело уже за вами. Вы размещаете
-          годный контент, а мы накручиваем вам реальных подписчиков, которые
-          поднимают популярность вашей группы.
-        </p>
+        <div class="social__container social__container_type_ig">
+          <h2 class="section-title social__title">
+            Телеграм позволяет зарабатывать деньги?
+          </h2>
+          <p class="text social__text">
+            В настоящее время Telegram стал одной из самых популярных и быстро
+            развивающихся социальных сетей не только в России, но и в мире.
+            Телеграм-каналы позволяют зарабатывать деньги, как на реализации
+            своей собственной продукции, так и на размещении рекламы. Но такой
+            вид заработка доступен только группам с большой аудиторией.
+          </p>
+          <h3 class="social__subtitle">Что же делать новичкам?</h3>
+          <p class="text social__text">
+            Мы предлагаем накрутку живых подписчиков в Телеграмм-каналы и
+            группы. Данная услуга поможет поднять популярность нового канала и
+            привлечь много новых пользователей. А там дело уже за вами. Вы
+            размещаете годный контент, а мы накручиваем вам реальных
+            подписчиков, которые поднимают популярность вашей группы.
+          </p>
+        </div>
       </section>
       <section class="faq">
         <h2 class="section-title faq__title">FAQ</h2>
