--- a/pages/youtube.html
+++ b/pages/youtube.html
@@ -293,7 +293,7 @@
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/in-scale-logo.svg"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/in-scale-logo.webp"
                 alt="In-scale"
               />
             </div>
@@ -315,7 +315,7 @@
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/otzyv-marketing-logo.svg"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/otzyv-marketing-logo.png"
                 alt="Отзыв-маркетинг"
               />
             </div>
@@ -326,7 +326,7 @@
             <div class="rating__logo-container">
               <img
                 class="rating__logo"
-                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/eto-razvod-logo.svg"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/grades/eto-razvod-logo.webp"
                 alt="Это развод?"
               />
             </div>
