fix: fix images for rating

--- a/pages/tiktok.html
+++ b/pages/tiktok.html
@@ -7,10 +7,10 @@
     <meta name="author" content="" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="../dist/base.c7a4d2590cdb88d39611.css" />
-    <link rel="stylesheet" href="../styles/telegram.css" />
-    <script type="module" src="../dist/base.c7a4d2590cdb88d39611.js"></script>
-    <script type="module" src="../scripts/pages/social.js"></script>
+    <link rel="stylesheet" href="../dist/base.55725642a142a2395040.css" />
+    <link rel="stylesheet" href="../dist/social.55725642a142a2395040.css" />
+    <script type="module" src="../dist/base.55725642a142a2395040.js"></script>
+    <script defer src="../dist/social.55725642a142a2395040.js"></script>
     <script type="module" src="../scripts/pages/tiktok.js"></script>
     <title>Тик-Ток</title>
   </head>
