feat: add bg images for social pages

--- a/pages/telegram.html
+++ b/pages/telegram.html
@@ -2025,7 +2025,9 @@
             ></ul>
           </div>
         </div>
-        <a href="#" class="btn btn_size_small btn_color_orange popup__button"
+        <a
+          href="/services"
+          class="btn btn_size_small btn_color_orange popup__button"
           >Сделать заказ</a
         >
       </div>
