feat: add new freeservice

--- a/pages/freeservice.html
+++ b/pages/freeservice.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="../dist/base.5b231c3ecbc15bb5766f.css" />
     <link
       rel="stylesheet"
-      href="../dist/freeservice.5b231c3ecbc15bb5766f.css"
+      href="../dist/freeservice.ebe8f117e4ee21cb6cb4.css"
     />
-    <script type="module" src="../scripts/base.v8.js"></script>
-    <script type="module" src="../scripts/pages/freeservises.v2.js"></script>
+    <script defer src="../dist/base.5b231c3ecbc15bb5766f.js"></script>
+    <script type="module" src="../dist/freeservice.ebe8f117e4ee21cb6cb4.js"></script>
     <title>Бесплатная накрутка</title>
   </head>
   <body class="root">
