--- a/pages/wallet-tutorial.html
+++ b/pages/wallet-tutorial.html
@@ -292,7 +292,7 @@
             allow="autoplay"
             controls
             class="wallet-tutorial__video"
-            src="https://rr1---sn-f5f7lnl7.c.drive.google.com/videoplayback?expire=1697844789&ei=BeQyZZWHFbC22LYPmaeJwAI&ip=95.55.21.150&id=d616082603750cb1&itag=22&source=webdrive&requiressl=yes&xpc=EghotM6WJ3oBAQ==&mh=-z&mm=32&mn=sn-f5f7lnl7&ms=su&mv=m&mvi=1&pl=24&ttl=transient&susc=dr&driveid=1MTYl76dCj4uycXPsGKCXFuevAsINGgNW&app=explorer&eaua=tB3NOpFH-aw&mime=video/mp4&vprv=1&prv=1&dur=212.625&lmt=1697833583032174&mt=1697833491&subapp=DRIVE_WEB_FILE_VIEWER&txp=0006224&sparams=expire,ei,ip,id,itag,source,requiressl,xpc,ttl,susc,driveid,app,eaua,mime,vprv,prv,dur,lmt&sig=AGM4YrMwRAIgc6W0tDZ9QKqiyBZxiQ7HQJI7_SFpib_3_reM7fiKq4QCIGyXyOERR1XIbrDjMRyORwUZzvwltPyG1uhQJJSZusfR&lsparams=mh,mm,mn,ms,mv,mvi,pl&lsig=AK1ks_kwRQIhAIcEQ7vdWNSjl3Qj6kLWiS1iirdtztn42CEJej7-T7e4AiBIwuwfG8uqP3wHRuPiqUTB26f8-n9pGiY_GA-hEBjFiQ==&cpn=2Uacx7j-BG833TVy&c=WEB_EMBEDDED_PLAYER&cver=1.20231015.00.00"
+            src="../video/wallet-tutorial_compressed.mp4"
           ></video>
         </div>
         <h3 class="title3-bold wallet-tutorial__subtitle">
