--- a/pages/wallet-tutorial.html
+++ b/pages/wallet-tutorial.html
@@ -294,6 +294,12 @@
             class="wallet-tutorial__video"
             src="https://cvws.icloud-content.com/B/AR7ROO1ScnmN1bvfqHvsFCgOll-wAdcQjPBKBOC3eAkWG0CYtP0SNxTd/wallet-tutorial.mov?o=AgrNY7j8phBJ3DfaouuTl1HQ1XyAF_Dhs3Em0OgIQ3gf&v=1&x=3&a=CAogGU3WBoCyEr0OkqjhzT-UrMduv-1qxIOjLGhzlT9Xl0MSbxDFyOv3tDEYxaXH-bQxIgEAUgQOll-wWgQSNxTdaifFzjDSKk2sUYQiYjy60zwX-GPE9hNTij6HVwcQogb2bD9u0dMOd_9yJ4-70hFNbQ5t2VbJ05km61gIa6fVp3FsHO7xq64ZBNxmAw2826vp_A&e=1697840747&fl=&r=86ccbe1f-6f9e-4daa-b42c-a97812795e15-1&k=DeCR-Wtx_K_ay12AyFV_vw&ckc=com.apple.clouddocs&ckz=com.apple.CloudDocs&p=41&s=TrDf5ugmBhEIOCaJukgqdCSTboE&cd=i"
           ></video>
+          <video
+            allow="autoplay"
+            controls
+            class="wallet-tutorial__video"
+            src="../video/wallet-tutorial_compressed.mp4"
+          ></video>
         </div>
         <h3 class="title3-bold wallet-tutorial__subtitle">
           Для оплаты необходим аккаунт в Telegram и банковская карта любой
