--- a/pages/wallet-tutorial.html
+++ b/pages/wallet-tutorial.html
@@ -303,14 +303,13 @@
             >
           </div>
 
-          <p class="title5 wallet-tutorial__intro-text">
+          <p class="title5 wallet-tutorial__intro-text" id="video">
             Как известно, из-за последних событий в мире оплата услуг с помощью
             иностранных карт в России затруднена или невозможна. Мы предлагаем
             универсальное платежное решение, которое будет работать, несмотря ни
             на какие ограничения. При этом, оплата займет не больше 10 минут.
           </p>
           <video
-            id="video"
             allow="autoplay"
             controls
             class="wallet-tutorial__video"
