feat: add wallet-tutorial block

--- a/pages/wallet-tutorial.html
+++ b/pages/wallet-tutorial.html
@@ -275,7 +275,7 @@
               </div>
               <img
                 class="social-intro__image"
-                src="../images/bg-social/vk/vk-phone.webp"
+                src="https://cdn.rawgit.com/bread2077/temp/main/images/bg-social/vk/vk-phone.webp"
                 alt="Телефон"
               />
             </div>
@@ -313,7 +313,7 @@
             allow="autoplay"
             controls
             class="wallet-tutorial__video"
-            src="../video/wallet-tutorial_compressed.mp4"
+            src="https://cdn.rawgit.com/bread2077/temp/main/video/wallet-tutorial_compressed.mp4"
           ></video>
         </div>
         <h3 id="instuction" class="title3-bold wallet-tutorial__subtitle">
